# file-link

./: #compile.bat  .gitignore  .gitmodules  Cargo.toml  LICENSE-MIT  README.md  config.toml  serve.py
backend/: .gitignore  Cargo.toml  build.rs
backend/certs/: websocket.p12
backend/public/static/: index.html  style.css
backend/src/: main.rs
backend/src/networking/: connection.rs  mod.rs
backend/src/web_interface/static/: index.css  index.html  receive.html
backend/src/webserver/: mod.rs  routing.rs  session.rs  session_manager.rs  webserver.rs
frontend/: Cargo.toml  build.rs  main.js
frontend/scripts/: build.py
frontend/src/: comp.rs  conn.rs  constants.rs  file_tag.rs  lib.rs  rtc.rs  web_rtc_manager.rs  wrtc_protocol.rs  ws_macros.rs
frontend/src/components/: draggable.rs  drop_field.rs  file_list.rs  home.rs  mod.rs
frontend/src/conn/macros/: mod.rs
frontend/src/pages/: chat_model.rs  home.rs  mod.rs  send.rs
frontend/src/pages/client/: connect.rs  download_manager.rs  mod.rs  password.rs
frontend/src/pages/host/: drop_files.rs  drop_receiver.rs  mod.rs  slider.rs
frontend/src/pages/receive/: mod.rs
frontend/src/pages/send/: drop_files.rs  file_item.rs  mod.rs
frontend/src/rtc/chat/: chat_model.rs  web_rtc_manager.rs
frontend/src/services/: api_service.rs  compression.rs  download_manager.rs  mod.rs  web_rtc.rs  web_socket.rs  websocket.rs
public/: bundle.js  file_link_frontend.d.ts  file_link_frontend.js  file_link_frontend_bg.wasm  file_link_frontend_bg.wasm.d.ts  index.html  package.json
public/static/: index.html  style.css
shared/: api_protocol.rs  config.rs  ws_protocol.rs
src/: main.rs
src/networking/: mod.rs
src/web_interface/: mod.rs
src/web_interface/static/: index.html  main.js  receive.js
