[package]
name = "file-link"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.1" # Use the latest compatible version
tokio = { version = "1", features = ["full"] } # Or specify the features you need