[package]
name = "file-link-backend"
version = "0.1.0"
edition = "2021"
license = "MIT/Apache-2.0"

[build-dependencies]
toml = "0.7.6"

[dependencies]
futures-core = "0.3.28"
futures-util = "0.3.28"
once_cell = "1.18.0"
rand = "0.8.5"
rocket = "0.5.0-rc.3"
rustls = "0.21.6"
serde = { version = "1.0.185", features = ["derive"] }
serde_json = "1.0.105"
tokio = { version = "1", features = ["full"] }
tokio-tls = "0.3.1"
tokio-tungstenite = "0.20.0"
tungstenite = "0.20.0"
turn = "0.6.1"

[dependencies.uuid]
version = "1.4.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
