[package]
name = "file-link-backend"
version = "0.1.0"
edition = "2021"
license = "MIT/Apache-2.0"

[build-dependencies]
toml = "0.7.6"

[dependencies]
async-condvar-fair = { version = "1.0.0", features = ["tokio"] }
once_cell = "1.18.0"
rand = "0.8.5"
rocket = { version = "0.5.0-rc.3", features = ["tls", "mtls"] }
serde = { version = "1.0.185", features = ["derive"] }
serde_json = "1.0.105"
tokio = "1.36.0"
toml = "0.7.6"
unescape = "0.1.0"
