[package]
name = "file-link-frontend"
version = "0.1.0"
edition = "2021"
license = "MIT/Apache-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
base64 = "0.21.2"
js-sys = "0.3.64"
serde = "1"
serde_derive = "1"
serde_json = "1"
wasm-bindgen = "^0.2"
wasm-bindgen-futures = "0.4.37"
yew = { version = "0.20.0", features = ["csr"] }
yew-websocket = "1.0.1"
zstd = { path = "zstd", version = "=0.10.1", default-features = false }
# zstd = "0.10.1"
# zstd = { version = "=0.10.1", default-features = false, features = ["std"] }
# libc = "0.2.21"

# [dependencies.zstd]
# version = "0.10.1"


[dependencies.web-sys]
version = "0.3.64"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
  'RtcAnswerOptions',
  'RtcCertificate',
  'RtcCertificateExpiration',
  'RtcCodecStats',
  'RtcConfiguration',
  'RtcDataChannel',
  'RtcDataChannelEvent',
  'RtcDataChannelEventInit',
  'RtcDataChannelInit',
  'RtcDataChannelState',
  'RtcFecParameters',
  'RtcIceCandidate',
  'RtcIceCandidateInit',
  'RtcIceCandidatePairStats',
  'RtcIceCandidateStats',
  'RtcIceComponentStats',
  'RtcIceServer',
  'RtcIdentityAssertion',
  'RtcIdentityAssertionResult',
  'RtcIdentityProvider',
  'RtcIdentityProviderDetails',
  'RtcIdentityProviderOptions',
  'RtcIdentityProviderRegistrar',
  'RtcIdentityValidationResult',
  'RtcInboundRtpStreamStats',
  'RtcMediaStreamStats',
  'RtcMediaStreamTrackStats',
  'RtcOfferAnswerOptions',
  'RtcOfferOptions',
  'RtcOutboundRtpStreamStats',
  'RtcPeerConnection',
  'RtcPeerConnectionIceEvent',
  'RtcPeerConnectionIceEventInit',
  'RtcRtcpParameters',
  'RtcRtpCodecParameters',
  'RtcRtpContributingSource',
  'RtcRtpEncodingParameters',
  'RtcRtpHeaderExtensionParameters',
  'RtcRtpParameters',
  'RtcRtpReceiver',
  'RtcRtpSender',
  'RtcRtpSourceEntry',
  'RtcRtpSynchronizationSource',
  'RtcRtpTransceiver',
  'RtcRtpTransceiverInit',
  'RtcRtxParameters',
  'RtcSessionDescription',
  'RtcSessionDescriptionInit',
  'RtcStats',
  'RtcStatsReport',
  'RtcStatsReportInternal',
  'RtcTrackEvent',
  'RtcTrackEventInit',
  'RtcTransportStats',
  'RtcIceConnectionState',
  'RtcIceGatheringState',
  'RtcSdpType',
  'RtcdtmfSender',
  'RtcdtmfToneChangeEvent',
  'RtcdtmfToneChangeEventInit',
  'RtcrtpContributingSourceStats',
  'HtmlDocument',
]
