[package]
name = "file-link-frontend"
version = "0.1.0"
edition = "2021"
license = "MIT/Apache-2.0"

[build-dependencies]
toml = "0.7.6"

[lib]
crate-type = ["cdylib"]

[dependencies]
async-std = "1.12.0"
base64 = "0.21.2"
gloo = { version = "0.10.0", optional = false }
js-sys = "0.3.64"
once_cell = "1.19.0"
serde = "1.0.47"
serde_derive = "1.0.47"
serde_json = "1.0.105"
tokio = "1.36.0"
toml = "0.7.6"
uuid = { version = "1.4.1", features = [
  "v4",
  "fast-rng",
  "macro-diagnostics",
  "serde",
] }
wasm-bindgen = "^0.2"
wasm-bindgen-futures = "0.4.37"
yew = { version = "0.20.0", features = ["csr", "ssr"] }
yew-router = "0.17.0"
zstd = { path = "zstd", version = "=0.10.1", default-features = false }

[dependencies.getrandom]
version = "0.2"
features = ["js"]

[dependencies.web-sys]
version = "0.3.64"
features = [
  'Blob',
  'DataTransfer',
  'Document',
  'DomStringList',
  'Element',
  'HtmlAnchorElement',
  'HtmlDocument',
  'HtmlElement',
  'IdbCursorWithValue',
  'IdbDatabase',
  'IdbFactory',
  'IdbKeyRange',
  'IdbObjectStore',
  'IdbObjectStoreParameters',
  'IdbOpenDbRequest',
  'IdbTransaction',
  'IdbTransactionMode',
  'MediaStreamTrack',
  'Node',
  'RtcAnswerOptions',
  'RtcCertificate',
  'RtcCertificateExpiration',
  'RtcCodecStats',
  'RtcConfiguration',
  'RtcDataChannel',
  'RtcDataChannelEvent',
  'RtcDataChannelEventInit',
  'RtcDataChannelInit',
  'RtcDataChannelState',
  'RtcFecParameters',
  'RtcIceCandidate',
  'RtcIceCandidateInit',
  'RtcIceCandidatePairStats',
  'RtcIceCandidateStats',
  'RtcIceComponentStats',
  'RtcIceConnectionState',
  'RtcIceGatheringState',
  'RtcIceServer',
  'RtcIdentityAssertion',
  'RtcIdentityAssertionResult',
  'RtcIdentityProvider',
  'RtcIdentityProviderDetails',
  'RtcIdentityProviderOptions',
  'RtcIdentityProviderRegistrar',
  'RtcIdentityValidationResult',
  'RtcInboundRtpStreamStats',
  'RtcMediaStreamStats',
  'RtcMediaStreamTrackStats',
  'RtcOfferAnswerOptions',
  'RtcOfferOptions',
  'RtcOutboundRtpStreamStats',
  'RtcPeerConnection',
  'RtcPeerConnectionIceEvent',
  'RtcPeerConnectionIceEventInit',
  'RtcRtcpParameters',
  'RtcRtpCodecParameters',
  'RtcRtpContributingSource',
  'RtcRtpEncodingParameters',
  'RtcRtpHeaderExtensionParameters',
  'RtcRtpParameters',
  'RtcRtpReceiver',
  'RtcRtpSender',
  'RtcRtpSourceEntry',
  'RtcRtpSynchronizationSource',
  'RtcRtpTransceiver',
  'RtcRtpTransceiverInit',
  'RtcRtxParameters',
  'RtcSdpType',
  'RtcSessionDescription',
  'RtcSessionDescriptionInit',
  'RtcStats',
  'RtcStatsReport',
  'RtcStatsReportInternal',
  'RtcTrackEvent',
  'RtcTrackEventInit',
  'RtcTransportStats',
  'RtcdtmfSender',
  'RtcdtmfToneChangeEvent',
  'RtcdtmfToneChangeEventInit',
  'RtcrtpContributingSourceStats',
  'Window',
]
